@@ -1,4 +1,10 @@
-$Id: Changelog.txt,v 1.21 2010/02/02 18:24:43 nanard Exp $
+$Id: Changelog.txt,v 1.23 2010/05/21 08:22:05 nanard Exp $
+
+2010/05/21:
+  make install now working under MacOSX (and BSD)
+
+2010/04/12:
+  cplusplus stuff in natpmp.h
 
 2010/02/02:
   Fixed compilation under Mac OS X
